# sonarlog_target_tracking

./: CMakeLists.txt  README.md  manifest.xml
examples/: cartesian_processing.cpp  cartesian_processing.hpp  cartesian_processing_main.cpp  convert_to_images.cpp  detection.cpp  dft_proc.cpp  evaluation.cpp  extraction.cpp  first_sample_proc.cpp  nearest_neighbor.cpp  nearest_neighbor_old.cpp  polar_processing.cpp  preprocessing.cpp  roi_extract.cpp  sonar_data_structure.cpp  sonargen.cpp  training.cpp  video_generator.cpp  videoconv.cpp
include/sonarlog_target_tracking/: Application.hpp  ArgumentParser.hpp
scripts/: concat.rb  example.sh.in  example0.sh.in  example1.sh.in  example_ferry.sh.in
src/: Application.cpp  Application.hpp  ArgumentParser.cpp  ArgumentParser.hpp  Common.cpp  Common.hpp  DatasetInfo.cpp  DatasetInfo.hpp  DetectionEval.cpp  DetectionEval.hpp  DetectionResult.hpp  DetectionStats.cpp  DetectionStats.hpp  EvaluationSettings.cpp  EvaluationSettings.hpp  ROC.cpp  ROC.hpp  SonarView.hpp  VideoConverterSettings.cpp  VideoConverterSettings.hpp  main.cpp
test/: test_ArgumentParser.cpp
